Fixed overflow-x

--- a/Amadon/wwwroot/css/app.css
+++ b/Amadon/wwwroot/css/app.css
@@ -150,6 +150,7 @@ a, .btn-link {
     z-index: 1;
     top: 2;
     overflow-x: hidden;
+    overflow-y: auto;
     padding: 10px 10px 10px 10px; /* top right bottom left  */
 }
 
@@ -160,6 +161,7 @@ a, .btn-link {
     z-index: 1;
     top: 2;
     overflow-x: hidden;
+    overflow-y: auto;
     padding: 5px 10px 10px 10px; /* top right bottom left  */
 }
 
